--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 # Core ML and Data Science
-pandas==2.1.4
-numpy==1.24.3
-scikit-learn==1.3.2
-joblib==1.3.2
-xgboost==2.0.2
-lightgbm==4.1.0
+pandas>=2.2.0
+numpy>=1.26.0
+scikit-learn>=1.4.0
+joblib>=1.3.2
+xgboost>=2.0.2
+lightgbm>=4.1.0
 
 # FastAPI and Web Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
 
 # Database
 sqlalchemy==2.0.23
 alembic==1.13.1
-psycopg2-binary==2.9.9
+# psycopg2-binary>=2.9.9  # Временно отключено из-за проблем с Python 3.13
 
 # Monitoring and Logging
 prometheus-client==0.19.0
@@ -29,20 +29,20 @@ pytest-cov==4.1.0
 httpx==0.25.2
 
 # Data Processing
-ydata-profiling==4.7.0
-dtale==3.6.0
-matplotlib==3.8.2
-seaborn==0.12.2
-plotly==5.17.0
+ydata-profiling>=4.17.0
+dtale>=3.6.0
+matplotlib>=3.8.2
+seaborn>=0.12.2
+plotly>=5.17.0
 
 # Additional ML libraries for credit scoring
-imbalanced-learn==0.11.0
-optuna==3.4.0
-shap==0.43.0
-lime==0.2.0.1
+imbalanced-learn>=0.11.0
+optuna>=3.4.0
+shap>=0.43.0
+lime>=0.2.0.1
 
 # MLflow for experiment tracking
-mlflow==2.8.1
+mlflow>=2.8.1
 
 # Testing and Quality Assurance
 pytest==7.4.3
