--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ on:
         type: boolean
 
 env:
-  PYTHON_VERSION: '3.11'
+  PYTHON_VERSION: '3.13'
   DATA_PATH: 'data/raw/accepted_2007_to_2018Q4.csv'
 
 jobs:
@@ -56,7 +56,7 @@ jobs:
       run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
     
     - name: Type checking (mypy)
-      run: mypy . --ignore-missing-imports
+      run: mypy . --ignore-missing-imports --exclude frontend --exclude config --exclude scripts
 
   # Тестирование
   test:
