--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install black isort flake8 mypy pytest
+        pip install black isort flake8 pytest
     
     - name: Code formatting check (Black)
       run: black --check --diff .
@@ -54,9 +54,6 @@ jobs:
     
     - name: Linting (flake8)
       run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    
-    - name: Type checking (mypy)
-      run: mypy . --ignore-missing-imports --exclude frontend --exclude config --exclude scripts
 
   # Тестирование
   test:
