--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-# Байт-компилированные / оптимизированные / DLL файлы
+# Virtual Environment
+.venv*/
+venv*/
+ENV/
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C расширения
 *.so
-
-# Распространение / упаковка
 .Python
 build/
 develop-eggs/
@@ -20,135 +21,89 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-
-# PyInstaller
-#  Обычно эти файлы создаются python скриптом из шаблона
-#  перед сборкой exe PyInstaller, чтобы внедрить дату/другую информацию.
-*.manifest
-*.spec
-
-# Логи установщика
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit тесты / отчеты покрытия
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Переводы
-*.mo
-*.pot
-
-# Django:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask:
-instance/
-.webassets-cache
-
-# Scrapy:
-.scrapy
-
-# Документация Sphinx
-docs/_build/
-
-# PyBuilder
-target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+*.ipynb
 
-# IPython
-profile_default/
-ipython_config.py
+# Data files
+*.csv
+*.pkl
+*.pickle
+*.h5
+*.hdf5
+*.model
+*.parquet
+*.feather
 
-# pyenv
-.python-version
+# Models
+models/
+!models/README.md
 
-# pipenv
-#   Согласно pypa/pipenv#598, рекомендуется включать Pipfile.lock в контроль версий.
-#   Однако, в случае совместной работы, если есть платформо-специфичные зависимости или зависимости
-#   без кроссплатформенной поддержки, pipenv может установить зависимости, которые не работают, или не
-#   установить все необходимые зависимости.
-#Pipfile.lock
+# CatBoost
+catboost_info/
 
-# PEP 582; используется например github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery
-celerybeat-schedule
-celerybeat.pid
-
-# Обработанные файлы SageMath
-*.sage.py
-
-# Окружения
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Настройки проекта Spyder
-.spyderproject
-.spyproject
-
-# Настройки проекта Rope
-.ropeproject
-
-# Документация mkdocs
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Проверка типов Pyre
-.pyre/
-
-# Специфичные для проекта
-data/raw/*.csv
-data/processed/
-models/trained/*.pkl
-models/artifacts/
-logs/
-*.log
+# Great Expectations
+gx/uncommitted/
 
 # IDE
-.vscode/
 .idea/
+.vscode/
 *.swp
 *.swo
 
-# ОС
+# OS
 .DS_Store
 Thumbs.db
 
-# Docker
-.dockerignore
+# Logs
+*.log
+logs/
 
-# Временные файлы
+# Temporary files
 *.tmp
 *.temp
+
+# Добавим исключения в .gitignore
+cat >> .gitignore << 'EOF'
+
+# Virtual Environments
+.venv/
+.venv312/
+venv/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# CatBoost
+catboost_info/
+
+# IDE
+.idea/
+.vscode/
+
+# PyTest
+.pytest_cache/
+
+# MLFlow
+mlruns/
+
+# Logs
+logs/
+
+# Data outputs
+DATA_OUT/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Great Expectations uncommitted
+gx/uncommitted/
+EOF
