--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 # Core ML and Data Science
-pandas>=2.2.0
 numpy>=1.26.0
+pandas>=2.2.0
 scikit-learn>=1.4.0
 joblib>=1.3.2
-xgboost>=2.0.2
+catboost==1.2.5
 lightgbm>=4.1.0
+
+# Data Validation
+great-expectations==0.18.0
 
 # FastAPI and Web Framework
 fastapi>=0.104.1
@@ -13,20 +16,20 @@ pydantic>=2.5.0
 pydantic-settings>=2.1.0
 
 # Database
-sqlalchemy==2.0.23
-alembic==1.13.1
-# psycopg2-binary>=2.9.9  # Временно отключено из-за проблем с Python 3.13
+sqlalchemy>=2.0.23
+alembic>=1.13.1
+psycopg2-binary>=2.9.9; python_version < '3.12'
 
 # Monitoring and Logging
-prometheus-client==0.19.0
-structlog==23.2.0
-sentry-sdk[fastapi]==1.38.0
+prometheus-client>=0.19.0
+structlog>=23.2.0
+sentry-sdk[fastapi]>=1.38.0
 
 # Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-httpx==0.25.2
+pytest>=7.4.3
+pytest-asyncio>=0.21.1
+pytest-cov>=4.1.0
+httpx>=0.25.2
 
 # Data Processing
 ydata-profiling>=4.17.0
@@ -45,33 +48,30 @@ lime>=0.2.0.1
 mlflow>=2.8.1
 
 # Testing and Quality Assurance
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-pytest-xdist==3.5.0
-coverage==7.3.2
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
-mypy==1.7.1
-bandit==1.7.5
-pre-commit==3.6.0
+pytest-mock>=3.12.0
+pytest-xdist>=3.5.0
+coverage>=7.3.2
+bandit>=1.7.5
+pre-commit>=3.6.0
 
 # Frontend
-streamlit==1.28.2
-gradio==4.7.1
+streamlit>=1.28.2
+gradio>=4.7.1
 
 # Development
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
-mypy==1.7.1
+black>=23.11.0
+isort>=5.12.0
+flake8>=6.1.0
+mypy>=1.7.1
 
 # Deployment
-docker==6.1.3
-kubernetes==28.1.0
+docker>=6.1.3
+kubernetes>=28.1.0
 
 # Utilities
-python-dotenv==1.0.0
-click==8.1.7
-tqdm==4.66.1
+python-dotenv>=1.0.0
+click>=8.1.7
+tqdm>=4.66.1
+
+# Progress bars
+tqdm>=4.66.1
